@@ -21,5 +21,6 @@
 
 #define GCERR_WRITE_TOGETHER 1
 #define GCERR_EXTRA_WHITESPACE 2
+#define GCERR_SPACE_BEFORE_PUNCTUATION 3
 
 #endif
